26. LOTS more skills/spells/etc have their castingQuality methods set: casting mobs just got smarter!
27. Children will now be tattooed with their parentage.
28. Internal: Lots of javadoc comments added.
29. Internal: Scriptable reworked to do run-time parse caching to increase speed significantly.
30. New Zappermask: QUESTWIN
31. Term of old bugs has expired.  New bugs set to take office early next year.
# Build 5.5.1 Released November 13, 2008 
1. couple of bug fixes in the new features
# Build 5.5.2 Release ?
1. Journal Show All Messages allows batch processing now
2. I3 will now properly respond to chan-user-req, and has a new default server in the ini
3. trailto supports nohomes flag now.
4. Crafting Expertises are no longer such a hideous hit on the time required
5. Wimpy can now accept a percentage of hit points as an argument
6. Messing up a mending now results in a partial mend. 
7. Clarify Scroll now has a ceiling, to help balance against mages. 
8. New Shaman Prayer: Cleanliness
9. Replay will now show the commands you entered also.
10. New Command Journal option: confirm
11. New Zapper Mask: GROUPSIZE
12. Catalog System has lots of new features -- faster, usage counters, & auto updating your map
13. Catalog command has new parameters: scan, dbscan, overlook, dboverlook
14. New player command: PAGEBREAK.   Also, pagebreak and linewrap added to CONFIG command.
15. LIST LOG now streams its data for extreme speed.
16. Players more than 10X fatigued will have a 1% chance/tick to fall under the sleep spell.
17. New Spell: Dispel Divination
18. Players will be notified when users on FRIENDS list log off, just like logins.
19. FieryRoom Behavior tick parms apply to damage now, instead of room destruction (other parms for that anyway).
20. CL Player Editor now allows Quest-Scripts to be Removed manually (to fix players with bad quest scripts attached to them)
21. MG Catalog Manager will now show "most popular" area for stuff, and allows sorting by column
  