@@ -1,8 +1,6 @@
 %0D
-We supports email!  By having a player in this mud, you automatically 
-have an email address that is like playername@domain.  Giving us a 
-real email address besides will allow you to have your player email 
-forwarded to you (but only from other players).  Giving a real email 
-address also allows you to retrieve your password if you forget it.  
-Your real address is kept secret, of course, hidden behind the player 
-email address mentioned above.
+@MudInfo?NAME@ supports email!  
+
+Your players in this mud will be given an email address like:
+playername@@MudInfo?DOMAIN@
+Email sent to this address by other players will be forwarded to your real email address automatically.  Giving a real email address also allows you to retrieve your password if you forget it.  Your real address is kept secret, of course, hidden behind the player email address mentioned above.
