@@ -29,3 +29,5 @@
        '._     """----.....______.....----"""     _.'
           `""--..,,_____            _____,,..--""`
                         `"""----"""`
+                        
+Welcome to @MudInfo?NAME@
