@@ -1,9 +1,11 @@
-^HWelcome to CoffeeMud!^N
+^HWelcome to @MudInfo?NAME@!^N
 
 You are about to enter a world of high adventure and terrible danger.  The first step in this process is to decide what sort of adventurer you will be.  
 
-Since this is a beta-test mud, you are allowed to create as many characters as you like in order to help us test.  We will need as much feedback as you can give us, including all of your gripes, praises, and suggestions if our adventure can improve.
+Since this is a beta-test mud, we will need as much feedback as you can give us, including all of your gripes, praises, and suggestions if our adventure can improve.
 
 You'll find that the character creation process is rather simple, but that the game itself is as complex and exciting as you make it.  You will be guided wizard-style through each question in creating your character.  
 
-If you are unfamiliar with MUDs, I recommend you check out the CoffeeMud website at http://www.coffeemud.org  for more information before proceeding.
+For more information, visit the game web site at http://@MudInfo?DOMAIN@:@WebServerPort@
+
+If you are unfamiliar with MUDs, check out the code base site at http://www.coffeemud.org for more information before proceeding.
