@@ -22,3 +22,5 @@
           `""--..,,_____            _____,,..--""`
                         `"""----"""`
 ---------------------------------------------------------
+@MudInfo?NAME@
+---------------------------------------------------------
