@@ -1,5 +1,8 @@
 *********************************************
-***           SERVER IS OFFLINE           ***
-***      Try again in a few minutes!      ***
+***
+*** @MudInfo?NAME@ IS OFFLINE
+***
+*********************************************
+***      Try again in a few minutes!      
 *********************************************
 
