@@ -1,4 +1,4 @@
-^xThe Rules of CoffeeMud!^.^?^N
+^xThe Rules of @MudInfo?NAME@!^.^?^N
 ^H1.^N No killing, stealing from, or otherwise harassing newbie players.
 ^H2.^N Maintain the illusion of fantasy by role-playing your character.
 ^H3.^N Exploitation of any system problems is forbidden! If you find a bug, or a loophole in the gameplay, report it with the BUG command!
