@@ -2154,4 +2154,6 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 19. FieryRoom Behavior tick parms apply to damage now, instead of room destruction (other parms for that anyway).
 20. CL Player Editor now allows Quest-Scripts to be Removed manually (to fix players with bad quest scripts attached to them)
 21. MG Catalog Manager will now show "most popular" area for stuff, and allows sorting by column
+22. Common text files (intro.txt, newchar.txt, rules.txt, etc) are sent through webmacro system now -- add macros!
+23. 
   
